cmake_minimum_required(VERSION 3.15)
project(lab_1_sem_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(lab_1_sem_2
        char_str_perc.cpp
        find_len_of_num.cpp
        floats.cpp
        floats_2.cpp
        floats_3.cpp
        floats_4.cpp
        ft_atoi.cpp
        ft_atoi_base.cpp
        ft_atoi_long_long.cpp
        ft_bzero.cpp
        ft_count_if.cpp
        ft_foreach.cpp
        ft_isalnum.cpp
        ft_isalpha.cpp
        ft_isascii.cpp
        ft_isdigit.cpp
        ft_isprint.cpp
        ft_itoa.cpp
        ft_itoa_base.cpp
        ft_itoa_base_unsigned.cpp
        ft_itoa_long_long.cpp
        ft_lstadd.cpp
        ft_lstappendelem.cpp
        ft_lstdel.cpp
        ft_lstdellast.cpp
        ft_lstdelone.cpp
        ft_lstiter.cpp
        ft_lstmap.cpp
        ft_lstnew.cpp
        ft_lstpushelem.cpp
        ft_memalloc.cpp
        ft_memccpy.cpp
        ft_memchr.cpp
        ft_memcmp.cpp
        ft_memcpy.cpp
        ft_memdel.cpp
        ft_memmove.cpp
        ft_memset.cpp
        ft_printf.cpp
        ft_printf.h
        ft_putchar.cpp
        ft_putchar_fd.cpp
        ft_putendl.cpp
        ft_putendl_fd.cpp
        ft_putnbr.cpp
        ft_putnbr_fd.cpp
        ft_putstr.cpp
        ft_putstr_fd.cpp
        ft_strcat.cpp
        ft_strchr.cpp
        ft_strclr.cpp
        ft_strcmp.cpp
        ft_strcpy.cpp
        ft_strdel.cpp
        ft_strdup.cpp
        ft_strequ.cpp
        ft_striter.cpp
        ft_striteri.cpp
        ft_strjoin.cpp
        ft_strjoinfree.cpp
        ft_strlcat.cpp
        ft_strlen.cpp
        ft_strmap.cpp
        ft_strmapi.cpp
        ft_strncat.cpp
        ft_strncmp.cpp
        ft_strncpy.cpp
        ft_strnequ.cpp
        ft_strnew.cpp
        ft_strnstr.cpp
        ft_strrchr.cpp
        ft_strreverse.cpp
        ft_strsplit.cpp
        ft_strstr.cpp
        ft_strsub.cpp
        ft_strtrim.cpp
        ft_tolower.cpp
        ft_toupper.cpp
        hex.cpp
        int_utils_1.cpp
        int_utils_2.cpp
        int_utils_3.cpp
        ints.cpp
        libft.h
        main.cpp
        oct.cpp
        parsing.cpp
        pnt_uns_hex.cpp
        precision.cpp
        str.cpp
        unsigned.cpp
        utils.cpp)
